fix: Use custom executor for async tasks in plugin
tasks 1-3